# healthcareai-examples

./: .azdignore  .gitignore  CONTRIBUTING.md  README.md  SUPPORT.md  dev-requirements.txt  env.example  index.html
.claude-plugin/: marketplace.json
.github/: CODEOWNERS
.github/workflows/: code-quality-python.yml  code-quality.yml  notebook-test.yml  package-test.yml
agentic/medimageinsight/: .mcp.json  README.md  walkthrough.md
agentic/medimageinsight/.claude-plugin/: plugin.json
agentic/medimageinsight/agents/: radiology-assistant.agent.md
agentic/medimageinsight/mcp-server/: adapter.py  config.py  errors.py  label_examples.csv  mi2_client.py  pyproject.toml  server.py  smoketest.py  zero_shot.py
agentic/medimageinsight/mcp-server/models/: README.md
agentic/medimageinsight/mcp-server/models/adapter_mlp/: weights.joblib
agentic/medimageinsight/skills/ground-adapter/: SKILL.md
agentic/medimageinsight/skills/ground-zeroshot/: SKILL.md
agentic/medimageinsight/skills/help/: SKILL.md
agentic/medimageinsight/skills/help/references/: about.md  skills.md  troubleshooting.md  walkthrough-agent.md
agentic/medimageinsight/skills/write-report/: SKILL.md
agentic/medimageinsight/skills/write-report/references/: phrase-bank.md
azureml/: .gitignore
azureml/advanced_demos/image_search/: 2d_image_search.ipynb  rag_infection_detection.ipynb  search_utils.py  volume_utils.py
azureml/advanced_demos/radpath/: rad_path_survival_demo.ipynb  survival_demo_utils.py
azureml/cxrreportgen/: cxr-deploy-batch-endpoint.ipynb  cxr-deploy.ipynb  simplified_end_to_end_demo.ipynb
azureml/gigatime/: virtual_phenotyping_helper.py
azureml/medimageinsight/: adapter-training.ipynb  advanced-call-example.ipynb  agent-classification-example.ipynb  mi2-deploy-batch-endpoint.ipynb  outlier-detection-demo.ipynb  zero-shot-classification.ipynb
azureml/medimageinsight/exam-parameter-demo/: exam_parameter_helpers.py
azureml/medimageinsight/finetuning/: .gitignore  mi2-finetuning.ipynb  text_constants.yaml  train-gastrovision.yaml
azureml/medimageparse/: mip-deploy-batch-endpoint.ipynb  mip-deploy.ipynb
azureml/medimageparse/finetuning/: medimageparse_finetuning.ipynb  parameters.yaml
azureml/medimageparse_3d/: medimageparse_3d_segmentation_demo.ipynb  mip3d-deploy-batch-endpoint.ipynb  mip3d-deploy.ipynb
azureml/medimageparse_3d/finetuning/: medimageparse_3d_finetuning.ipynb  parameters.yaml
deploy/existing/: README.md  azure.yaml  setup_azd_env_for_aml.sh
deploy/existing/infra/: main.bicep  main.parameters.json
deploy/fresh/: README.md  azure.yaml
deploy/fresh/infra/: main.bicep  main.parameters.json
deploy/shared/: abbreviations.json  aiServices.bicep  aiServicesWithGpt.bicep  amlWorkspace.bicep  containerRegistry.bicep  deployModel.bicep  gptDeployment.bicep  keyVault.bicep  mlModelEndpoint.bicep  modelDeployWithTraffic.bicep  models.yaml  modelsDefault.json  storageAccount.bicep
deploy/shared/scripts/: cleanup.py  postprovision.py  preprovision.py  select_models.py  utils.py
docs/: deployment-guide.md  manual-deployment.md
package/: pyproject.toml
package/healthcareai_toolkit/: settings.py
package/healthcareai_toolkit/cli/: __init__.py  test_endpoints.py
package/healthcareai_toolkit/clients/: __init__.py  openai.py  retry.py
package/healthcareai_toolkit/clients/medimage/: __init__.py  cxrreportgen.py  gigapath.py  gigatime.py  medimagebase.py  medimageinsight.py  medimageparse.py
package/healthcareai_toolkit/data/: image_preprocessor.py  image_reader.py  io.py  manip.py
package/healthcareai_toolkit/data/file_types/: __init__.py  extra_types.magic
package/healthcareai_toolkit/util/: azureml_managers.py  parallel.py
package/model_library/: embedding.py
package/model_library/utils/: data.py  device.py  inference.py  training.py
tests/: conftest.py  test-mii-client-parallel-generator.ipynb  test-mii-client.ipynb  test-mip-client.ipynb  test_basic.py  test_mii_client.py  test_mii_client_parallel_generator.py  test_mip_client.py  test_notebooks.py
