[tool.poetry]
name = "healthcareai_toolkit"
version = "0.2.0"
description = "A toolkit for healthcare AI examples, providing various utilities and models to streamline the use of the examples in Microsoft HealthcareAI ecosystem."
authors = ["Healthcare AI Team <medimagingaihls@microsoft.com>"]
packages = [
    {include = "healthcareai_toolkit", from = "."},
    {include = "model_library", from = "."}
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
azure-ai-ml = "~1.20.0"
marshmallow = "~3.23.1"
azure-storage-file-datalake = "~12.17.0"
azureml-fsspec = "~1.3.0"
nbformat = "~5.10.0"
plotly = "~5.23.0"
scikit-learn = "~1.5.0"
torch = "~2.12.0"
torchvision = "~0.27.0"
tqdm = "~4.66.5"
python-gdcm = "~3.0.26"
gdown = "~5.2.0"
SimpleITK = "~2.4.0"
opencv-python = "~4.10.0.84"
pydicom = "~2.4.0"
azure-identity = "~1.19.0"
timm = "~1.0.19"
transformers = "~4.53.0"
setuptools = "~78.1.0"
einops = "~0.8.0"
fvcore = "~0.1.5.post20221221"
sentencepiece = "~0.2.0"
tenacity = "~9.0.0"
ftfy = "~6.2.3"
ipykernel = "~6.29.5"
pandas = ">=2.0.3,<3.0"
jupyter = "~1.1.1"
pillow = "~12.2.0"
matplotlib = ">=3.9,<4.0"
numpy = ">=1.25.2,<3.0"
openai = "~1.98.0"
umap-learn = "~0.5.6"
scipy = ">=1.15.3,<2.0"
azureml-core = "~1.57.0.post3"
ratelimit = "~2.2.1"
python-magic-bin = {version = "~0.4.0", markers = "sys_platform == 'win32'"}
python-magic = {version = "~0.4.0", markers = "sys_platform != 'win32'"}
scikit-image = "~0.24.0"
python-dotenv = "~1.2.2"
nibabel = "~5.3.1"
seaborn = {version = "~0.13.2", optional = true}
lifelines = {version = "~0.30.3", optional = true, python = ">=3.11"}
faiss-cpu = {version = "~1.14.3", optional = true}
semantic-kernel = {version = "~1.39.4", optional = true}
pytest = {version = ">=8.0", optional = true}
papermill = {version = ">=2.7.0", optional = true}
black = {version = ">=25.12.0,<26", extras = ["jupyter"], optional = true}
GitPython = {version = "3.1.50", optional = true}

[tool.poetry.extras]
examples = ["seaborn", "lifelines", "faiss-cpu", "semantic-kernel"]
dev = ["seaborn", "lifelines", "faiss-cpu", "semantic-kernel", "pytest", "papermill", "black", "GitPython"]
[tool.poetry.scripts]
healthcareai-test = "healthcareai_toolkit.cli.test_endpoints:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["--disable-warnings"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]